// goim logic grpc proto
// build: protoc --go_out=plugins=grpc:. api.proto

syntax = "proto3";

package goim.logic;

option go_package = "logic";

import "gogo.proto";

message PushMsg {
    enum Type {
        PUSH = 0;
        ROOM = 1;
        BROADCAST = 2;
    }
    Type type = 1;
    int32 operation = 2;
    string server = 3;
    repeated string keys = 4;
    string room = 5;
    int32 speed = 6;
    string platform = 7;
    bytes msg = 8;
}

message CloseReply {
}

message CloseReq {
}

message PingReply {
}

message PingReq {
}

message ConnectReq {
    option (gogoproto.goproto_stringer) = false;
    string server = 1;
    string serverKey = 2;
    string cookie = 3;
    bytes token = 4;
}

message ConnectReply {
    int64 mid = 1;
    string key = 2;
    string roomID = 3;
    string platform = 4;
    repeated int32 accepts = 5;
}

message DisconnectReq {
    int64 mid = 1;
    string key = 2;
    string server = 3;
}

message DisconnectReply {
    bool has = 1;
}

message HeartbeatReq {
    int64 mid = 1;
    string key = 2;
    string server = 3;
}

message HeartbeatReply {
}

message OnlineReq {
    option (gogoproto.goproto_stringer) = false;
    string server = 1;
    map<string, int32> roomCount = 2;
}

message OnlineReply {
    option (gogoproto.goproto_stringer) = false;
    map<string, int32> allRoomCount = 1;
}

message ReceiveReq {
    int64 mid = 1;
    int32 op = 2;
    string room = 3;
    bytes msg = 4;
}

message ReceiveReply {
}

service Logic {
    // Ping Service 
    rpc Ping(PingReq) returns(PingReply);
    // Close Service 
    rpc Close(CloseReq) returns(CloseReply);
    // Connect
    rpc Connect(ConnectReq) returns (ConnectReply);
    // Disconnect
    rpc Disconnect(DisconnectReq) returns (DisconnectReply);
    // Heartbeat
    rpc Heartbeat(HeartbeatReq) returns (HeartbeatReply);
    // RenewOnline
    rpc RenewOnline(OnlineReq) returns (OnlineReply);
    // Receive
    rpc Receive(ReceiveReq) returns (ReceiveReply);
}
